2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/ChatWidget.* : Update the chat text at the top of the editbox instead of the bottom.

2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/JesusEdit* :
		Use absolute values for size and position.
		Renamed windows to Builder lest people think I'm religious.
		Set the orientation of newly created constructions.

2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainGenerator.cpp: Report the correct size of the terrain.

2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/ServerBrowserWidget.xml, src/components/ogre/widgets/Performance.widget: Disallow resizing.

2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Added tabs for choosing and creating characters.
	* Added functionality for creating characters through the gui. The list of possible types are hard coded though (to only include "settler").

2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Refactor create character code to a separate method.

2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Use a different imageset for the mouse cursor. This is to prepare for future skins.

2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Change method signatures to conform with latest Eris.

2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Use version 1.0.1 of Ogre.
	* Rearranged library checking order, so more meaningful messages are produces for missing libs.

2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>

	* changed the default grass texture
	* increased the default max pixel error
	* fix for the make_dist_media script; make it find the material files

2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>

	* wait with inclusion of FoliageArea until it at least compiles

2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>

	* removed unecessary include from GUIManager.h
	* add binreloc support to EmberOgre.cpp
